# jedit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-plz.yml
src/: app.rs  container.rs  error.rs  fixtures.rs  main.rs
src/app/: action.rs  component.rs  config.rs  job.rs  math.rs
src/app/component/: confirm_dialog.rs  loading.rs  popup.rs  preview.rs  scrollbar.rs  test_render.rs  workspace.rs
src/app/component/confirm_dialog/: boolean_confirm_dialog.rs  error_confirm_dialog.rs  text_confirm_dialog.rs
src/app/component/snapshots/: jedit__app__component__confirm_dialog__test__render_long_line_test.snap  jedit__app__component__confirm_dialog__test__render_multiline_test.snap  jedit__app__component__confirm_dialog__test__render_test-2.snap  jedit__app__component__confirm_dialog__test__render_test.snap  jedit__app__component__confirm_dialog__test__render_title_test.snap  jedit__app__component__loading__test__render_test-2.snap  jedit__app__component__loading__test__render_test-3.snap  jedit__app__component__loading__test__render_test-4.snap  jedit__app__component__loading__test__render_test-5.snap  jedit__app__component__preview__test__render_empty_test.snap  jedit__app__component__preview__test__render_long_line_test-2.snap  jedit__app__component__preview__test__render_long_line_test-3.snap  jedit__app__component__preview__test__render_long_line_test-4.snap  jedit__app__component__preview__test__render_long_line_test.snap  jedit__app__component__preview__test__render_short_test-2.snap  (+85 more)
src/container/: node.rs
(+13 files in other folders)
