[package]
name = "jedit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.29.0"
indexmap = { version = "2.9.0", features = ["rayon", "serde"] }
ratatui = { version = "0.29.0", features = ["all-widgets", "unstable-rendered-line-info"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
sonic-rs = "0.5.1"
thiserror = "2.0.12"

[dev-dependencies]
insta = "1.43.0"

[profile.dev.package.insta]
opt-level = 3
