[package]
name = "jedit"
description = "Command-line tool to view and edit large JSON file"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
byte-unit = { version = "5.1.6", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.29.0"
indexmap = { version = "2.9.0", features = ["rayon", "serde"] }
ratatui = { version = "0.29.0", features = ["all-widgets", "unstable-rendered-line-info"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
sonic-rs = "0.5.1"
thiserror = "2.0.12"
toml = "0.8.22"

[dev-dependencies]
insta = "1.43.1"
rand = "0.9.1"

[profile.dev.package.insta]
opt-level = 3
